changes on workbench and central database installers - support for updating installation with workbench and central databases - changed IBPWorkbench to IBWorkbench in system tray - changed phaseleous to phaseolus - a number of minor changes