@@ -1,2 +1,2 @@
-set JAVA_OPTS="-javaagent:../lib/spring-instrument-3.1.1.RELEASE.jar"
+set JAVA_OPTS="-javaagent:../lib/spring-instrument-3.1.1.RELEASE.jar -XX:MaxPermSize=1024m -Xmx1024m"
 set JRE_HOME=../../jre
